# SpiritPlanner

./: .gitignore  AGENTS.md  COMMANDS.md  Clean-Build.ps1  DOCUMENTATION.md  FLET_NOTES.md  Pipfile  README.md  REPO_MAP.md  ROUTING_AUDIT.md  TDD.md  instructions.txt  main.py  pyproject.toml  status.md
app/: android_main.py  main.py  pyproject.toml
app/assets/catalogs/: boards.tsv  layouts.tsv
app/assets/secrets/: README.md  service_account.json.example
app/core/diagnostics/: __init__.py  debug_reporter.py  logging_setup.py  ring_buffer_handler.py  safe_handlers.py
app/navigation/: __init__.py  navigator.py
app/screens/: data_lookup.py  eras_screen.py  incursion_detail_screen.py  incursions_screen.py  periods_screen.py  shared_components.py
app/screens/eras/: __init__.py  eras_components.py  eras_handlers.py  eras_model.py  eras_screen.py  eras_state.py  eras_view.py  eras_viewmodel.py
app/screens/incursion_detail/: __init__.py  incursion_detail_components.py  incursion_detail_handlers.py  incursion_detail_model.py  incursion_detail_screen.py  incursion_detail_state.py  incursion_detail_view.py  incursion_detail_viewmodel.py
app/screens/incursions/: __init__.py  incursions_components.py  incursions_handlers.py  incursions_model.py  incursions_screen.py  incursions_state.py  incursions_view.py  incursions_viewmodel.py
app/screens/periods/: __init__.py  periods_view.py  (+6 more)
app/services/: firebase_init.py  firestore_service.py  score_service.py  service_registry.py
app/utils/: datetime_format.py  debug_hud.py  dialogs.py  logger.py  navigation.py  router.py
(+38 files in other folders)
